force-app/main/default/objects/sfcma__CMALog__c/sfcma__CMALog__c.object-meta.xml
<CustomObject>
    <description>An event log that you or Salesforce Customer Support can use to diagnose issues in the Checkout Management App.</description>
    <label>Checkout Log</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>