force-app/main/default/objects/sfcma__CMALog__c/fields/sfcma__Category__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>API Callout Request limits exceeded</fullName>
            </value>
            <value>
                <fullName>App connection with Stripe failure</fullName>
            </value>
            <value>
                <fullName>Batch Failure</fullName>
            </value>
            <value>
                <fullName>Create Transaction failure</fullName>
            </value>
            <value>
                <fullName>Get Invoice item failure</fullName>
            </value>
            <value>
                <fullName>Get Subscription failure</fullName>
            </value>
            <value>
                <fullName>Import Existing Data failure</fullName>
            </value>
            <value>
                <fullName>Internal System Error</fullName>
            </value>
            <value>
                <fullName>Number of sent emails exceeded</fullName>
            </value>
            <value>
                <fullName>Rest Callout Queue Failure</fullName>
            </value>
            <value>
                <fullName>Stripe duplicated event</fullName>
            </value>
            <value>
                <fullName>Stripe Event Processor failure</fullName>
            </value>
            <value>
                <fullName>Stripe Invalid event received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>