force-app/main/default/objects/sfcma__CMALog__c/fields/sfcma__Data__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Data__c</fullName>
    <label>Data</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>