force-app/main/default/objects/sfcma__CMALog__c/fields/sfcma__Severity__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>